Улучшение верстки с помощью Bootstrap.